--- a/FBComposeViewResources/DEFacebookComposeView.xib
+++ b/FBComposeViewResources/DEFacebookComposeView.xib
@@ -47,7 +47,6 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrameSize">{312, 44}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="174234801"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -63,7 +62,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{8, 7}, {63, 30}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="944682106"/>
 								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -107,7 +105,6 @@
 								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{250, 7}, {53, 30}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1044352878"/>
 								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -132,7 +129,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{227, 134}</string>
 										<reference key="NSSuperview" ref="1044352878"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="292559536"/>
 										<string key="NSReuseIdentifierKey">_NS:639</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -163,7 +159,6 @@
 								</array>
 								<string key="NSFrame">{{-20, 44}, {332, 134}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="460695988"/>
 								<string key="NSReuseIdentifierKey">_NS:10</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -180,7 +175,6 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{0, 42}, {312, 3}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="346448275"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<int key="IBUIContentMode">4</int>
@@ -196,7 +190,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{221, 69}, {71, 71}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="526610094"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<int key="IBUIContentMode">2</int>
@@ -208,7 +201,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{215, 67}, {84, 79}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="726406209"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -223,7 +215,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{226, 64}, {71, 71}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="717117467"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<int key="IBUIContentMode">2</int>
@@ -235,7 +226,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{220, 62}, {84, 79}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="352681246"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -247,7 +237,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{231, 59}, {71, 71}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="283953837"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<int key="IBUIContentMode">2</int>
@@ -259,7 +248,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{225, 57}, {84, 79}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="787471836"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -271,7 +259,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 11}, {312, 26}}</string>
 								<reference key="NSSuperview" ref="947069124"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="721475442"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -301,7 +288,6 @@
 						</array>
 						<string key="NSFrame">{{4, 25}, {312, 189}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="168992822"/>
 						<string key="NSReuseIdentifierKey">_NS:196</string>
 						<reference key="IBUIBackgroundColor" ref="379362525"/>
@@ -313,7 +299,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{243, 70}, {79, 34}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:567</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -326,7 +311,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="947069124"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -654,132 +638,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">67</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">DEFacebookComposeViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="cancel">id</string>
-						<string key="send">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="cancel">
-							<string key="name">cancel</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="send">
-							<string key="name">send</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="attachment1FrameView">UIImageView</string>
-						<string key="attachment1ImageView">UIImageView</string>
-						<string key="attachment2FrameView">UIImageView</string>
-						<string key="attachment2ImageView">UIImageView</string>
-						<string key="attachment3FrameView">UIImageView</string>
-						<string key="attachment3ImageView">UIImageView</string>
-						<string key="cancelButton">UIButton</string>
-						<string key="cardHeaderLineView">UIView</string>
-						<string key="cardView">DEFacebookSheetCardView</string>
-						<string key="characterCountLabel">UILabel</string>
-						<string key="navImage">UIImageView</string>
-						<string key="paperClipView">UIImageView</string>
-						<string key="sendButton">UIButton</string>
-						<string key="textView">DEFacebookTextView</string>
-						<string key="textViewContainer">UIView</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="attachment1FrameView">
-							<string key="name">attachment1FrameView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="attachment1ImageView">
-							<string key="name">attachment1ImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="attachment2FrameView">
-							<string key="name">attachment2FrameView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="attachment2ImageView">
-							<string key="name">attachment2ImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="attachment3FrameView">
-							<string key="name">attachment3FrameView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="attachment3ImageView">
-							<string key="name">attachment3ImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cardHeaderLineView">
-							<string key="name">cardHeaderLineView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cardView">
-							<string key="name">cardView</string>
-							<string key="candidateClassName">DEFacebookSheetCardView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="characterCountLabel">
-							<string key="name">characterCountLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="navImage">
-							<string key="name">navImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="paperClipView">
-							<string key="name">paperClipView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sendButton">
-							<string key="name">sendButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="textView">
-							<string key="name">textView</string>
-							<string key="candidateClassName">DEFacebookTextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="textViewContainer">
-							<string key="name">textViewContainer</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DEFacebookComposeViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DEFacebookSheetCardView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DEFacebookSheetCardView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DEFacebookTextView</string>
-					<string key="superclassName">UITextView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DEFacebookTextView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
@@ -792,7 +651,7 @@
 			<string key="DEFacebookAttachmentFrame.png">{84, 79}</string>
 			<string key="DEFacebookCardHeaderLine.png">{600, 3}</string>
 			<string key="DEFacebookPaperClip.png">{78, 34}</string>
-			<string key="DEFacebookSendButtonPortrait.png">{16, 16}</string>
+			<string key="DEFacebookSendButtonPortrait.png">{12, 30}</string>
 			<string key="NavBarLandscape.png">{17, 32}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
